--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@
     padding: 0%;
     box-sizing:border-box;
     font-family: 'poppins',sans-serif;
+    
 }
 .container{
+    
     background-color: black;
     height: 100vh;
     width: 100%;
@@ -14,6 +16,10 @@
     background-size:  70%;
     color: #fff;
     padding: 0 8%;
+    @media only screen and (min-width: 601px) {
+        div.example {
+          font-size: 80px;
+        }}
 }
  .div .nav{
     display:flex;
@@ -34,10 +40,10 @@ nav ul li{
 }
 nav ul li a{
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 a{
-    color: black;
+    color: rgb(0, 0, 0);
     letter-spacing: 5px;
     background-color:#393939;
     border-radius: 3px;
@@ -45,7 +51,8 @@ a{
     padding: 3px;
 }
 a:hover{
-    background-color: whitesmoke;
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     border-radius: 3px;
 }
 hr{
@@ -70,7 +77,7 @@ hr{
     border: 0;
     outline: none;
     padding: 15px 30px;
-    color: black;
+    color: rgb(245, 245, 245);
     margin: 30px -25px;
 }
 .container button:hover{
